--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
         - Every attribute value is enclosed in quotation marks.
         - Every <img> tag has an "ALT" Attribute.
     -->
-    
+    <header>
+		<a href = "index.html"><img src = "homePic.png" alt = "home button"/></a>
+		<h2>Dev tools final project<.=/h2>
+		<img src = "Logo.png" alt = "Logo of site"/>
+		<div class = "navBar">
+			<div><a href = "index.html">Home!</a></div>
+			<div><a href = "contactUs.html">Contact Us!</a></div>
+			<div><a href = "#">Unknown</a></div>
+			<div><a href = "#">Unknown</a></div>
+			<div><a href = "#">Unknown</a></div>
+			<div><a href = "#">Unknown</a></div>
+		</div>
+	</header>
 </body>
 
 </html> <!-- Indicates the end of the document -->
