--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         - Every <img> tag has an "ALT" Attribute.
     -->
     <header>
-		<a href = "index.html"><img src = "homePic.png" alt = "home button"/></a>
-		<h2>Dev tools final project<.=/h2>
-		<img src = "Logo.png" alt = "Logo of site"/>
+		<a href = "index.html"><img id = "home" src = "Images/homeIcon.png" alt = "home button"/></a>
+		<h2>Dev tools final project</h2>
+		<img  id = "logo" src = "Images/Logo.jfif" alt = "Logo of site"/>
 		<div class = "navBar">
 			<div><a href = "index.html">Home!</a></div>
 			<div><a href = "contactUs.html">Contact Us!</a></div>
@@ -36,6 +36,11 @@
 			<div><a href = "#">Unknown</a></div>
 		</div>
 	</header>
+
+    <footer>
+        <p>This is for Dev tools final git project where we create a page using githubs features</p>
+        <p>Damian Bernatchez</p>
+    </footer>
 </body>
 
 </html> <!-- Indicates the end of the document -->
