--- a/contactUs.html
+++ b/contactUs.html
@@ -36,7 +36,16 @@
 			<div><a href = "#">Unknown</a></div>
 		</div>
 	</header>
-    
+    <div class = "content">
+        <h2>Contact Us Form</h2>
+        <p>Name: </p>
+        <input type = "text">
+        <p>Phone Number:</p>
+        <input type = "text" placeholder="+1 (___) ___-____">
+        <p>Your Email: </p>
+        <input type = "email" placeholder = "example@example.com">
+        <input id = "submit" type = "submit">
+    </div>
     <footer>
         <p>This is for Dev tools final git project where we create a page using githubs features</p>
         <p>Damian Bernatchez</p>
