--- a/contactUs.html
+++ b/contactUs.html
@@ -30,13 +30,13 @@
 		<div class = "navBar">
 			<div><a href = "index.html">Home!</a></div>
 			<div><a href = "contactUs.html">Contact Us!</a></div>
-			<div><a href = "#">Unknown</a></div>
-			<div><a href = "#">Unknown</a></div>
-			<div><a href = "#">Unknown</a></div>
-			<div><a href = "#">Unknown</a></div>
+			<div><a href = "gpacalc.html">gpa calculator</a></div>
+			<div><a href = "images.html">images</a></div>
+			<div><a href = "games.html">Games!</a></div>
+			<div><a href = "misc.html">Turtle</a></div>
 		</div>
 	</header>
-    <div class = "content">
+    <div class = "content"><!--This is the start of the content div-->
         <h2>Contact Us Form</h2>
         <p>Name: </p>
         <input type = "text">
@@ -45,7 +45,7 @@
         <p>Your Email: </p>
         <input type = "email" placeholder = "example@example.com">
         <input id = "submit" type = "submit">
-    </div>
+    </div><!--THis is the end of the content div-->
     <footer>
         <p>This is for Dev tools final git project where we create a page using githubs features</p>
         <p>Damian Bernatchez</p>
