--- a/games.html
+++ b/games.html
@@ -36,12 +36,12 @@
 			<div><a href = "misc.html">Turtle</a></div>
 		</div>
 	</header>
-    <div class = "gamesContent">
+    <div class = "gamesContent"><!--This is the start of the content div-->
         <a class = "gameImage" href = "https://lightgaming.ca/index.html"><img src = "images/hangmanStart.png"></a>
         <p class = "gameName">Hangman</p>
         <a class = "gameImage" href = "https://lightgaming.ca/clicker.html"><img src = "images/clicker.png"></a>
         <p class = "gameName">Energy Drink Clicker</p>
-    </div>
+    </div><!--THis is the end of the content div-->
     <footer>
         <p>This is for Dev tools final git project where we create a page using githubs features</p>
         <p>Damian Bernatchez</p>
