--- a/gpacalc.html
+++ b/gpacalc.html
@@ -31,12 +31,12 @@
 			<div><a href = "index.html">Home!</a></div>
 			<div><a href = "contactUs.html">Contact Us!</a></div>
 			<div><a href = "gpacalc.html">gpa calculator</a></div>
-			<div><a href = "#">Unknown</a></div>
-			<div><a href = "#">Unknown</a></div>
-			<div><a href = "#">Unknown</a></div>
+			<div><a href = "images.html">images</a></div>
+			<div><a href = "games.html">Games!</a></div>
+			<div><a href = "misc.html">Turtle</a></div>
 		</div>
 	</header>
-    <div class = "content">
+    <div class = "content"><!--This is the start of the content div-->
         <h2>Reverse GPA Calculator</h2>
         <p>current GPA </p>
         <input type = "text">
@@ -48,7 +48,7 @@
         <input type = "number">
         <p id = "resultBox">you will need x GPA over the next X credits</p>
         <input id = "submit" type = "submit">
-    </div>
+    </div><!--THis is the end of the content div-->
     <footer>
         <p>This is for Dev tools final git project where we create a page using githubs features</p>
         <p>Damian Bernatchez</p>
