--- a/images.html
+++ b/images.html
@@ -36,11 +36,11 @@
 			<div><a href = "misc.html">Turtle</a></div>
 		</div>
 	</header>
-    <div class = "imageContent">
+    <div class = "imageContent"><!--This is the start of the content div-->
         <img src = "images/Image1.jpg"/>
         <img src = "images/Image2.jpg"/>
         <img src = "images/Image3.jpg"/>
-    </div>
+    </div><!--THis is the end of the content div-->
     <footer>
         <p>This is for Dev tools final git project where we create a page using githubs features</p>
         <p>Damian Bernatchez</p>
