--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 			<div><a href = "index.html">Home!</a></div>
 			<div><a href = "contactUs.html">Contact Us!</a></div>
 			<div><a href = "gpacalc.html">gpa calculator</a></div>
-			<div><a href = "#">Unknown</a></div>
-			<div><a href = "#">Unknown</a></div>
-			<div><a href = "#">Unknown</a></div>
+			<div><a href = "images.html">images</a></div>
+			<div><a href = "games.html">Games!</a></div>
+			<div><a href = "misc.html">Turtle</a></div>
 		</div>
 	</header>
-    <div class = "indexContent">
+    <div class = "indexContent"> <!--This is the start of the content div-->
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque autem molestias ex in nulla! Facere laborum libero accusantium reprehenderit quasi, voluptas voluptate a iusto aspernatur beatae dicta iure. Ullam, quisquam!</p>
-    </div>
+    </div> <!--THis is the end of the content div-->
     <footer>
         <p>This is for Dev tools final git project where we create a page using githubs features</p>
         <p>Damian Bernatchez</p>
