--- a/misc.html
+++ b/misc.html
@@ -36,10 +36,10 @@
 			<div><a href = "misc.html">Turtle</a></div>
 		</div>
 	</header>
-    <div class = "turtleContent">
+    <div class = "turtleContent"><!--This is the start of the content div-->
         <p>I needed a sixth page so here have a turtle of wisdom</p>
         <img src = "images/turtle.png">
-    </div>
+    </div><!--THis is the end of the content div-->
     <footer>
         <p>This is for Dev tools final git project where we create a page using githubs features</p>
         <p>Damian Bernatchez</p>
